--- a/appendix.tex
+++ b/appendix.tex
@@ -51,7 +51,7 @@ As the 1950s progressed, the word ``hack'' acquired a sharper, more rebellious e
 \fi
 
 \ifdefined\chs
-经过整个50年代的演化，“Hack”这个词的含义变得更加尖锐和反叛。50年代的麻省理工学院校园里充满了竞争，而且黑客的出现，正是这种竞争文化的产物和延续。Goof和Pranks（喜欢恶作剧的人）突然成为学生们发泄多余精力的方式，他们甚至会跑去学校的教务处去做鬼脸，沉溺于各种稀奇古怪的想法和被繁重的研究生课程所遏制的行为。学院众多走廊和地下蒸气管道提供了无畏于紧闭的大们和“禁止进入”标识的学生们足够多探索的机会。学生们开始把这种不被规章制度允许的探索称为“地道黑客”。在地面上，校园的电话系统也提供了类似的探索机会。通过业余的实验和一些专业的研究，学生找到一些恶作剧的办法。学生们从相对古老的“地道黑客”活动中获得了灵感，很快就参与到了这种新型的“电话黑客”活动中。
+经过整个50年代的演化，“Hack”这个词的含义变得更加尖锐和反叛。50年代的麻省理工学院校园里充满了竞争，而且黑客的出现，正是这种竞争文化的产物和延续。Goof和Pranks（喜欢恶作剧的人）突然成为学生们发泄多余精力的方式，他们甚至会跑去学校的教务处去做鬼脸，沉溺于各种稀奇古怪的想法和被繁重的研究生课程所遏制的行为。学院众多走廊和地下蒸气管道提供了无畏于紧闭的大门和“禁止进入”标识的学生们足够多探索的机会。学生们开始把这种不被规章制度允许的探索称为“地道黑客”。在地面上，校园的电话系统也提供了类似的探索机会。通过业余的实验和一些专业的研究，学生找到一些恶作剧的办法。学生们从相对古老的“地道黑客”活动中获得了灵感，很快就参与到了这种新型的“电话黑客”活动中。
 \fi
 
 \ifdefined\eng
