--- a/appendix.tex
+++ b/appendix.tex
@@ -75,7 +75,7 @@ Given their affinity for sophisticated electronics -- not to mention the traditi
 \fi
 
 \ifdefined\chs
-复杂的电子电路对黑客们有着天然的亲和力，抛开那些无视紧锁的大门和“禁止进入”标识的传统的麻省理工学院的学生，新一代的黑客们很快就在校园中找到了一种新的玩具。这种被称为TX-0的机器，是最早进入商用市场的计算机之一。到了20世纪50年代末，整个S\&P的团队都已经把兴趣转移到TX-0的控制室里，用他们的创新精神来折腾这个机器。从那时起，计算机程序设计领域开始进入“黑客”一词的词源。“黑客行为”不再是指焊接一些看起来很奇怪的电路板，而是更多的是与软件程序开发联系起来，还包括少许“正式”的软件开发方法或过程。它同样意味着提高效率和改进现有程序让它们运行的更快，因为只有这样才能节省更多的系统资源。从词源上来讲，这个词也指仅仅为了好玩或娱乐而编写一些没有实质性用途的程序。
+复杂的电子电路对黑客们有着天然的亲和力，抛开那些无视紧锁的大门和“禁止进入”标识的传统的麻省理工学院的学生，新一代的黑客们很快就在校园中找到了一种新的玩具。这种被称为TX-0的机器，是最早进入商用市场的计算机之一。到了20世纪50年代末，整个S\&P的团队都已经把兴趣转移到TX-0的控制室里，用他们的创新精神来折腾这个机器。从那时起，计算机程序设计领域开始进入“黑客”一词的词源。“黑客行为”不再是指焊接一些看起来很奇怪的电路板，而是把程序们一起修补或制作，而不顾“官方”的方式或软件编写流程。它同样意味着提高效率和改进现有程序让它们运行的更快，因为只有这样才能节省更多的系统资源。从词源上来讲，这个词也指仅仅为了好玩或娱乐而编写一些没有实质性用途的程序。
 \fi
 
 \ifdefined\eng
